--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+service_account.json
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
