--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-service_account.json
-
 # Created by .ignore support plugin (hsz.mobi)
 ### Python template
 # Byte-compiled / optimized / DLL files
@@ -151,3 +149,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Credetials
+service_account.json
+
